# dryer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt
dryer/: Cargo.toml
dryer/examples/: generate_benchmark_data.rs  timing.rs
dryer/src/: chunker.rs  config.rs  edit_distance.rs  lib.rs  lsh.rs  main.rs  minhash.rs  normalizer.rs  output.rs  scanner.rs
dryer/tests/: integration_test.rs
examples/: generate_benchmark_data.rs  timing.rs
ops/: evaluate.py
optimizer/: __init__.py  evaluator.py
scripts/: pre-commit-ruff.sh  pre-commit.sh
src/: chunker.rs  config.rs  edit_distance.rs  lib.rs  lsh.rs  main.rs  minhash.rs  output.rs  scanner.rs  scoring.rs  shingling.rs
test/benchmark_data/: module_001.py  module_003.py  module_004.py  module_006.py  module_009.py  module_012.py  module_014.py  module_015.py  module_016.py  module_017.py  module_019.py  module_020.py  module_021.py  module_023.py  module_026.py
test/fake_code/: __init__.py  edge_cases.py  services.py
tests/: integration_test.rs
tests/benchmark_data/: module_000.py  module_002.py  module_005.py  module_007.py  module_008.py  module_010.py  module_011.py  module_013.py  module_018.py  module_022.py  module_024.py  module_025.py  module_027.py  module_028.py  module_029.py
tests/fake_code/: EXPECTED_DUPLICATES.md  models.py  utils.py
tests/fake_code/api/: __init__.py  handlers.py
tests/py/: __init__.py
