[package]
name = "dryer"
version = "0.1.1"
edition = "2024"
description = "Duplicate code detector"
license = "MIT"
repository = "https://github.com/dsweet99/dryer"
keywords = ["duplicate", "detection", "code", "lsh", "minhash"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# File system
ignore = "0.4"

# Parallelism
rayon = "1"

# Fast hashing
ahash = "0.8"
rustc-hash = "2"

# Edit distance (SIMD-accelerated)
triple_accel = "0.4"

# Config file
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Home directory
dirs = "6"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
