[project]
name = "dryer-optimizer"
version = "0.1.0"
description = "Python optimizer for dryer duplicate detection"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["optimizer", "ops"]

[tool.pytest.ini_options]
testpaths = ["tests/py"]
python_files = ["test_*.py"]

